--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -3,6 +3,32 @@
   margin-right: auto;
   width: 650px;
 }
+h1{
+    text-align: center;
+    font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
+}
+.nav {
+  text-align: center;
+}
+
+.nav li {
+  display: inline-block;
+  font-size: 20px;
+  padding: 0px;
+}
+.nav li a {
+  display: block;
+  color: black;
+  text-align: center;
+  padding: 14px 30px;
+  text-decoration: none;
+}
+.nav li a:hover {
+  background-color: grey;
+}
+.active {
+  background-color: blue;
+}
 
 .image-thumbnails {
   display: flex;
