Additional comments to css file

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -1,19 +1,19 @@
-#content {
-  margin-left: auto;
-  margin-right: auto;
-  width: 650px;
-}
-
-body {
+body { /*page background*/
   background-image: url("images/Greywatercolor.jpg");
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
 }
 
-h1{
+h1{ /*title text*/
     text-align: center;
     font-family: 'Prata', serif ;
+}
+
+#content {/*index content formating*/
+  margin-left: auto;
+  margin-right: auto;
+  width: 650px;
 }
 
 .nav { /*entire nav bar*/
@@ -22,7 +22,6 @@ h1{
 
 .nav li { /* item in in nav*/
   display: inline-block;
-  
 }
 
 .nav li a { /*link in nav*/
@@ -34,27 +33,27 @@ h1{
   padding: 14px 30px;
   text-decoration: none;
 }
-.nav li a:hover {
+.nav li a:hover { /*hover over nav bar link*/
   text-decoration: underline;
 }
 
-.active {
+.active {/*current page identifier*/
   background-color: gray;
   color: white;
 }
 
-.image-thumbnails {
+.image-thumbnails { /*gallery image formating*/
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
 }
 
-.image-thumbnails img {
+.image-thumbnails img { /*individual gallery image formating*/
   margin: 10px;
   max-height: 200px;
   max-width: 200px;
 }
 
-#greeting-container {
+#quote-container { /*js. greeting containter*/
   margin-top: 20px;
 }
