Put json output on page

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -65,3 +65,7 @@ h1{ /*title text*/
 #hello-container { /*js. greeting containter*/
   margin-top: 20px;
 }
+
+#data-container { /*json parsing output*/
+  margin-top: 20px;
+}
